CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH};$ENV{CMAKE_MODULE_PATH}")

INCLUDE(common OPTIONAL)

IF(NOT COMMON_MODULE_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find common.cmake! Please place it in CMakeModules subdirectory, set CMAKE_MODULE_PATH environement variable or set CMAKE_MODULE_PATH parameter to CMake.")
ENDIF()

SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 0)
SET(VERSION_PATCH "REVISION")
SET(AUTHOR "Kervala")
SET(PRODUCT "HotlineMiami WAD Extractor")
SET(DESCRIPTION "Extractor for Hotline Miami 1 and 2")
SET(TARGET "extractor")
SET(YEAR "2015")

PROJECT(${PRODUCT} C CXX)

INIT_DEFAULT_OPTIONS()

SET_OPTION_DEFAULT(WITH_INSTALL_LIBRARIES OFF)

SETUP_DEFAULT_OPTIONS()

INIT_BUILD_FLAGS()
SETUP_BUILD_FLAGS()

SETUP_PREFIX_PATHS(${TARGET})
SETUP_EXTERNAL()

GEN_CONFIG_H()

FIND_PACKAGE(MyBoost 1.42 COMPONENTS filesystem system)

INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})

FILE(GLOB SRC src/*.cpp src/*.h)
SET_TARGET_CONSOLE_EXECUTABLE(${TARGET} ${SRC})
TARGET_LINK_LIBRARIES(${TARGET} ${BOOST_LIBRARIES})
